--- a/client/views/partials/babyImageBlock.ejs
+++ b/client/views/partials/babyImageBlock.ejs
@@ -1,5 +1,5 @@
 <!-- input: images array  -->
-<% for(let i=0; i< data.length; i++){ %>
+<% for(let i=data.length - 1; i >= 0; i--){ %>
 <div class="post card my-3">
   <div class="card-body">
     <p class="post-time">Posted on <%= data[i].date %></p>
