--- a/client/views/partials/head.ejs
+++ b/client/views/partials/head.ejs
@@ -18,6 +18,7 @@
   rel="stylesheet"
 />
 <link rel="stylesheet" href="/public/styles/style.css" />
+<script src="https://d3js.org/d3.v7.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -25,3 +26,4 @@
 <script defer src="/public/js/userService.js"></script>
 <script defer src="/public/js/timelineService.js"></script>
 <script defer src="/public/js/adminService.js"></script>
+<script defer src="/public/js/chartService.js"></script>
