--- a/client/views/partials/nav.ejs
+++ b/client/views/partials/nav.ejs
@@ -12,16 +12,16 @@
   <div class="collapse navbar-collapse">
     <ul class="navbar-nav mx-auto ulShow">
       <li class="nav-item nav-hover">
-        <a class="nav-link" href="#">Timeline</a>
+        <a class="nav-link imageBlock">Timeline</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Diary</a>
+        <a class="nav-link diaryBlock">Diary</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Tags</a>
+        <a class="nav-link tagsBlock">Tags</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Health</a>
+        <a class="nav-link healthBlock">Health</a>
       </li>
     </ul>
   </div>
