--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -153,7 +153,7 @@ main {
 }
 
 /* ================================= 
-               Timeline
+                 Nav
 ==================================== */
 .sticky-top {
   position: sticky;
@@ -163,12 +163,12 @@ main {
 .box-shadow {
   box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 10px 0px;
 }
-.ulShow {
-  display: inline-flex;
-}
 .account:hover {
   content: url("/public/images/member-hover.png");
 }
+/* ================================= 
+               Baby List
+==================================== */
 .container-fluid {
   height: calc(100% - 60px); /* Adjust height based on the navbar height */
   display: flex;
@@ -184,12 +184,6 @@ main {
   max-width: 20%;
   min-width: 230px;
 }
-.post-content {
-  /* width: calc(75% - 150px); */
-  flex: 0 0 65%;
-  max-width: 65%;
-  padding: 0 1rem;
-}
 .age-tree {
   flex: 1 1 10%;
   min-width: 175px;
@@ -197,7 +191,32 @@ main {
   border-left: 1px solid #ddd;
   text-align: right;
 }
-
+.ulTree {
+  position: fixed;
+  bottom: 20%;
+  right: 25px;
+}
+.tree-item {
+  cursor: pointer;
+}
+.nested {
+  display: none;
+}
+.active .nested {
+  display: block;
+}
+.ulShow {
+  display: inline-flex;
+}
+/* ================================= 
+            Baby Profile
+==================================== */
+.post-content {
+  /* width: calc(75% - 150px); */
+  flex: 0 0 65%;
+  max-width: 65%;
+  padding: 0 1rem;
+}
 .profile {
   height: 330px;
 }
@@ -233,6 +252,16 @@ main {
 .upload-btn-wrapper input[type="file"] {
   display: none;
 }
+/* ================================= 
+        Timeline Container
+==================================== */
+.divShow {
+  display: inline;
+}
+.divHide {
+  display: none;
+}
+/* imageBlock */
 .posts {
   margin-top: 30px;
 }
@@ -244,19 +273,29 @@ main {
   font-size: 12px;
   color: #666;
 }
-.ulTree {
-  position: fixed;
-  bottom: 20%;
-  right: 25px;
+
+/* healthBlock */
+.activity-rect {
+  stroke: #000;
+  stroke-width: 1px;
 }
-.tree-item {
-  cursor: pointer;
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-bottom: 20px;
 }
-.nested {
-  display: none;
+th,
+td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
 }
-.active .nested {
-  display: block;
+th {
+  background-color: #f2f2f2;
+}
+caption {
+  font-weight: bold;
+  margin-bottom: 10px;
 }
 /* ================================= 
           Footer
