--- a/client/views/partials/babyTagBlock.ejs
+++ b/client/views/partials/babyTagBlock.ejs
@@ -1,13 +1,14 @@
-<!-- input: images array  -->
-<% for(let i=imageData.length - 1; i >= 0; i--){ %>
+<!-- input: tag images array  -->
+<% for(let i=tagData.length - 1; i >= 0; i--){ %>
 <div class="post card my-3">
   <div class="card-body">
-    <p class="post-time">Posted on <%= imageData[i].date %></p>
-    <% for(let j=0; j< imageData[i].images.length; j++){ %>
+    <h2 class="tag-title"><%= tagData[i].tag %></h2>
+    <p class="post-time">Posted on <%= tagData[i].date %></p>
+    <% for(let j=0; j< tagData[i].images.length; j++){ %>
     <!-- Check image datatype -->
-    <% if (imageData[i].images[j].type === "image") { %>
+    <% if (tagData[i].images[j].type === "image") { %>
     <img
-      src="<%=imageData[i].images[j].filename %> "
+      src="<%=tagData[i].images[j].filename %> "
       alt="Post Image <%=j%>"
       class="img-fluid"
     />
@@ -15,7 +16,7 @@
     <!-- Check video datatype -->
     <% if (imageData[i].images[j].type === "video") { %>
     <video
-      src="<%=imageData[i].images[j].filename %>"
+      src="<%=tagData[i].images[j].filename %>"
       autoplay="autoplay"
       loop="loop"
       muted="muted"
@@ -25,7 +26,7 @@
     <% } %> <% }%>
   </div>
   <div class="card-footer" style="text-align: right">
-    <span>Photo <%=imageData[i].images.length%></span>
+    <span>Photo <%=tagData[i].images.length%></span>
     <span>·</span>
     <span>View all ></span>
   </div>
