--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -51,6 +51,14 @@ main {
 /* ================================= 
                 Login
 ==================================== */
+.message {
+  opacity: 1;
+  transition: opacity 3s ease-in-out; /* 1 second fade-in effect */
+  background-color: lightyellow;
+  color: orange;
+  font-weight: bolder;
+}
+
 .home {
   width: 80%;
   display: flex;
@@ -293,10 +301,7 @@ td {
 th {
   background-color: #f2f2f2;
 }
-caption {
-  font-weight: bold;
-  margin-bottom: 10px;
-}
+
 /* ================================= 
           Footer
 ==================================== */
