--- a/client/views/partials/nav.ejs
+++ b/client/views/partials/nav.ejs
@@ -17,15 +17,15 @@
       <li class="nav-item">
         <a class="nav-link diaryBlock">Diary</a>
       </li>
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link tagsBlock">Tags</a>
-      </li>
+      </li> -->
       <li class="nav-item">
         <a class="nav-link healthBlock">Health</a>
       </li>
     </ul>
   </div>
-  <a href="/user/logout"
+  <a class="logout" href="/logout"
     ><img class="account" src="/public/images/member.png" alt="logout"
   /></a>
 </nav>
