--- a/client/views/partials/babyNav.ejs
+++ b/client/views/partials/babyNav.ejs
@@ -9,9 +9,9 @@
     <li class="nav-item" style="padding: 0 0.5rem">
       <a class="nav-link diaryBlock" href="#">Diary</a>
     </li>
-    <li class="nav-item" style="padding: 0 0.5rem">
+    <!-- <li class="nav-item" style="padding: 0 0.5rem">
       <a class="nav-link tagsBlock" href="#">Tags</a>
-    </li>
+    </li> -->
     <li class="nav-item" style="padding: 0 0.5rem">
       <a class="nav-link healthBlock">Health</a>
     </li>
