--- a/client/views/partials/babyTextBlock.ejs
+++ b/client/views/partials/babyTextBlock.ejs
@@ -1,11 +1,9 @@
 <!-- input: text array  -->
-<% for(let i=textData.length - 1; i >= 0; i--){ %>
+<% for(let i=0 ; i < textData.length; i++){ %>
 <div class="post card my-3">
   <div class="card-body">
     <p class="post-time">Posted on <%= textData[i].date %></p>
-    <% for(let j=0; j< textData[i].texts.length; j++){ %>
-    <p class="txt-fluid"><%=textData[i].texts[j]%></p>
-    <% }%>
+    <p class="txt-fluid"><%=textData[i].content%></p>
   </div>
 </div>
 <% }%>
