add firstFollow page, timeline summery and image carousel to fullfill userflow

--- a/client/views/partials/babyAgeTree.ejs
+++ b/client/views/partials/babyAgeTree.ejs
@@ -1,6 +1,6 @@
 <div class="col-md-3 age-tree">
   <div class="ulTree">
-    <ul class="list-unstyled">
+    <ul class="list-unstyled ulHide">
       <li class="tree-item">Today</li>
       <li class="tree-item">
         1 - 2 Years old
