--- a/client/views/partials/nav.ejs
+++ b/client/views/partials/nav.ejs
@@ -7,7 +7,7 @@
       alt=""
       loading="lazy"
     />
-    myLittleMoments
+    小小時光
   </a>
   <div class="collapse navbar-collapse">
     <ul class="navbar-nav mx-auto ulShow">
