--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -171,6 +171,49 @@ input[type="number"] {
 #lineBtn:hover {
   background-color: #05b34c;
 }
+/* ================================= 
+            Image Player
+==================================== */
+.fullscreen-carousel {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 20;
+}
+#carouselExampleControls{
+  height: 100%;
+  display: flex;
+  justify-content: center;
+}
+.carousel-inner{
+  height: 80%;
+  width: 80%;
+  margin: auto;
+  overflow: hidden;
+}
+.carousel-inner img {
+  height: 100%;
+  margin: auto;
+  object-fit: contain;
+  object-position: center;
+}
+.carousel-item{
+  height: 100%;
+}
+.close-carousel {
+  /* position: relative; */
+  position: absolute;
+  top: 5%;
+  left: 80%;
+  font-size: 2rem;
+  color: white;
+  cursor: pointer;
+  z-index: 50;
+  display: inline-block;
+}
 
 /* ================================= 
                  Nav
@@ -178,7 +221,7 @@ input[type="number"] {
 .sticky-top {
   position: sticky;
   top: 0;
-  z-index: 1020;
+  z-index: 10;
 }
 .box-shadow {
   box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 10px 0px;
@@ -189,9 +232,42 @@ input[type="number"] {
 /* ================================= 
                Baby List
 ==================================== */
+.babyFollow {
+  background-color: rgba(255, 255, 255, 0.8);
+  height: calc(100% - 60px);
+  width: 100%;
+  position: absolute;
+  z-index: 1;
+}
+.babyFollow .home{
+  height: calc(100% - 60px);
+  margin: auto;
+}
+.cancelFollow{
+  display: flex;
+}
+.cancelFollow img{
+  margin-left: auto;
+  text-align: right;
+  width: 30px; 
+  height: 30px;
+  color: gray;
+  background-color: rgb(255, 255, 255);
+  border-radius: 50%;
+  border: 2px solid lightgray;
+}
+
+.cancelFollow img:hover {
+  content: url("/public/images/cancel_icon_hover.png");
+}
+/* ================================= 
+               Baby List
+==================================== */
 .container-fluid {
   height: calc(100% - 60px); /* Adjust height based on the navbar height */
   display: flex;
+  position: relative;
+  z-index: 0;
 }
 .baby-list,
 .post-content,
@@ -203,6 +279,14 @@ input[type="number"] {
   flex: 0 0 20%;
   max-width: 20%;
   min-width: 230px;
+}
+.baby-item{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.baby-selected{
+  border-left: 0.5rem solid orange;
 }
 .age-tree {
   flex: 1 1 10%;
@@ -227,6 +311,9 @@ input[type="number"] {
 }
 .ulShow {
   display: inline-flex;
+}
+.ulHide {
+  display: none;
 }
 /* ================================= 
             Baby Profile
@@ -282,8 +369,32 @@ input[type="number"] {
   display: none;
 }
 /* imageBlock */
+.imageBlocks {
+  margin: auto;
+  width: 100%;
+  height: 500px;
+  display: grid;
+  gap: 10px;
+}
+.block {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+.blockFilter{
+  background-color: rgba(0, 0, 0, 0.5);
+  color:white;
+  font-weight: 800;
+  font-size: 250%;
+}
+.viewAll:hover{
+  cursor: pointer;
+  font-weight: bolder;
+}
 .posts {
   margin-top: 30px;
+  
 }
 .post img {
   max-width: 100%;
@@ -340,4 +451,62 @@ i {
   font-size: 0.8rem;
   color: lightslategray;
   align-self: center;
+}
+
+/* ================================= 
+          imageBlock layout
+==================================== */
+.imageBlocks[data-blocks="1"] {
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+}
+
+.imageBlocks[data-blocks="2"] {
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+}
+
+.imageBlocks[data-blocks="3"] {
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+}
+
+.imageBlocks[data-blocks="3"] .block:nth-child(1) {
+  grid-column: span 2;
+}
+
+/* 调整 4 和 5 个块的布局 */
+.imageBlocks[data-blocks="4"] {
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+}
+
+.imageBlocks[data-blocks="4"] .block:nth-child(1),
+.imageBlocks[data-blocks="4"] .block:nth-child(2) {
+  grid-column: span 1;
+  grid-row: 1;
+}
+
+.imageBlocks[data-blocks="4"] .block:nth-child(3),
+.imageBlocks[data-blocks="4"] .block:nth-child(4) {
+  grid-column: span 1;
+  grid-row: 2;
+}
+
+.imageBlocks[data-blocks="5"] {
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+}
+
+.imageBlocks[data-blocks="5"] .block:nth-child(1),
+.imageBlocks[data-blocks="5"] .block:nth-child(2) {
+  grid-column: span 1;
+  grid-row: 2;
+}
+
+.imageBlocks[data-blocks="5"] .block:nth-child(3),
+.imageBlocks[data-blocks="5"] .block:nth-child(4),
+.imageBlocks[data-blocks="5"] .block:nth-child(5) {
+  grid-column: span 1;
+  grid-row: 1;
 }
