pages ready for test

--- a/client/views/timeline.ejs
+++ b/client/views/timeline.ejs
@@ -28,7 +28,7 @@
           <div class="tags divHide" id="tagContainer">
             <%- include ("partials/babyTextBlock", { tagData }) %>
           </div>
-          <div class="charts divHide" id="healthContainer">
+          <div class="charts divHide" id="healthContainer" loaded="false">
             <%- include ("partials/babyHealthBlock") %>
           </div>
         </div>
