--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -194,7 +194,8 @@ input[type="number"] {
   margin: auto;
   overflow: hidden;
 }
-.carousel-inner img {
+.carousel-inner img,
+.carousel-inner video {
   height: 100%;
   margin: auto;
   object-fit: contain;
@@ -396,7 +397,8 @@ input[type="number"] {
   margin-top: 30px;
   
 }
-.post img {
+.post img,
+.post video {
   max-width: 100%;
   border-radius: 8px;
 }
