ec2 test: revise upload cover and headshot

--- a/client/views/partials/nav.ejs
+++ b/client/views/partials/nav.ejs
@@ -26,6 +26,6 @@
     </ul>
   </div>
   <a class="logout" href="/logout"
-    ><img class="account" src="/public/images/member.png" alt="logout"
+    ><img class="account" src="/public/images/member.png" alt="logout" title="logout"
   /></a>
 </nav>
