--- a/client/views/partials/userLogin.ejs
+++ b/client/views/partials/userLogin.ejs
@@ -6,7 +6,7 @@
         class="sign-control"
         type="email"
         id="inputEmail"
-        placeholder="Enter email"
+        placeholder="Enter Email"
         name="email"
         required
       />
@@ -18,6 +18,7 @@
         class="sign-control"
         type="password"
         id="inputLoginPassword"
+        placeholder="Enter Password"
         name="password"
         required
       />
