revise title into chinese, add line profileUrl undefined and revise sql to record line id

--- a/client/views/imageDisplay.ejs
+++ b/client/views/imageDisplay.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <%- include ("partials/head") %>
-    <title>myLittleMoments | Timeline</title>
+    <title>我的小小時光 | Timeline</title>
     <script defer src="/public/js/chartService.js"></script>
   </head>
   <body>
