--- a/client/views/login.ejs
+++ b/client/views/login.ejs
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
   <head>
     <%- include ("partials/head") %>
-    <title>myLittleMoments | Login</title>
+    <title>我的小小時光 | Login</title>
   </head>
   <body>
     <%- include ("partials/nav")%>
