--- a/client/views/timeline.ejs
+++ b/client/views/timeline.ejs
@@ -8,7 +8,7 @@
     <!------------ baby Nav ------------>
     <%- include ("partials/nav") %>
     <!-------- add/follow baby ------------>
-    <div class="babyFollow <%=firstFollow%>">
+    <div class="babyFollow <%=newFollow%>">
       <div class="home" >
         <div class="home-col3">
           <div class="message" style="margin-bottom: 1rem"></div>
@@ -27,7 +27,7 @@
             <!-- user new follow -->
             <%- include ("partials/userFirstFollow")%>
             <!-- user new baby -->
-            <%- include ("partials/userNewBaby")%
+            <%- include ("partials/userNewBaby")%>
           </div>
         </div>
       </div>      
