remove babyId input in newBabyForm

--- a/client/views/partials/userNewBaby.ejs
+++ b/client/views/partials/userNewBaby.ejs
@@ -61,7 +61,7 @@
         />
       </div>
       <br />
-      <div class="sign-group">
+      <!-- <div class="sign-group">
         <label for="inputBabyId">寶寶代碼</label>
         <input
           class="sign-control"
@@ -71,7 +71,7 @@
           name="babyId"
         />
       </div>
-      <br />
+      <br /> -->
       <div class="sign-group">
         <div class="showBabyTrainBox">
             <input id="showBabyTrain" type="checkbox" onclick="showBabyTrainBox()"/>
