set newBaby and follow input value for demo directly

--- a/client/views/partials/userFirstFollow.ejs
+++ b/client/views/partials/userFirstFollow.ejs
@@ -23,6 +23,7 @@
         id="inputCall"
         placeholder="寶寶怎麼稱呼您?"
         name="call"
+        value="帥叔叔"
         required
       />
     </div>
@@ -35,6 +36,7 @@
         id="inputBabyId"
         placeholder="請輸入寶寶代碼"
         name="babyId"
+        value="1682294400000"
         required
       />
     </div>
