--- a/client/views/partials/userNewBaby.ejs
+++ b/client/views/partials/userNewBaby.ejs
@@ -21,6 +21,7 @@
           id="inputBabyCall"
           placeholder="寶寶怎麼稱呼您?"
           name="babyCall"
+          value="媽媽"
           required
         />
       </div>
@@ -33,6 +34,7 @@
           id="inputBabyName"
           placeholder="請輸入寶寶名稱"
           name="babyName"
+          value="Ivy"
           required
         />
       </div>
@@ -90,7 +92,7 @@
         <br />
         <div id="babyTrainBox" class="sign-control" style="display: none;">
             <p>為自動辨識寶寶</p>
-            <p>請上傳包含五官的正臉、側臉、上仰照片</p>
+            <p>請上傳至少一張包含五官的正臉、側臉、上仰照片</p>
             <div class="trainBox-row sampleBox">
                 <div class="sample">
                     <img src="/public/images/front.png" alt="front">
