revise demo input value

--- a/client/views/partials/userFirstFollow.ejs
+++ b/client/views/partials/userFirstFollow.ejs
@@ -23,7 +23,7 @@
         id="inputCall"
         placeholder="寶寶怎麼稱呼您?"
         name="call"
-        value="帥叔叔"
+        value="媽媽"
         required
       />
     </div>
