--- a/client/views/partials/userNewBaby.ejs
+++ b/client/views/partials/userNewBaby.ejs
@@ -6,9 +6,10 @@
           class="sign-control"
             id="inputBabyRole"
             name="babyRole"
-            value="manager"
+            value="family"
           />
-              <option value="manager">父母</option>
+              <!-- <option value="manager">父母</option> -->
+              <option value="family">家人</option>
           </select>
       </div>
       <br />
